--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <h1>Project: Etch-a-Sketch</h1>
+    <div class="container"></div>
 
 
     <script src="./scripts.js"></script>
