Complete whole project
Add btn and logic for reseating grind and creating new grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Project: Etch-a-Sketch</h1>
+    <div class="btnContainer">
+        <button id="reset">Create Grid</button>
+        <button>Random color</button>
+    </div>
     <div class="container"></div>
 
 
